# agent-weaver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_history.sh  pyproject.toml
agent_weaver/: __init__.py
agent_weaver/claude_client/: __init__.py
agent_weaver/configs/: __init__.py  default.yaml
agent_weaver/core/: gait_generator.py  ik_solver.py  policy.py  runner.py
agent_weaver/mujoco_env/: hexapod.xml
agent_weaver/sim2real/: domain_random.py
agent_weaver/teleop/: ble_controller.py
agent_weaver/utils/: robot_defs.py
agent_weaver_deploy/include/crawler_agi/: controller.hpp  ik_solver.h  pid_control.h  servo_driver.h  utility.h
agent_weaver_deploy/src/: controller.cpp  main.cpp
docs/: assembly_guide.md  sim2real.md
docs/figures/: README_benchmark_snippets.md  generate_benchmark_figures.py
print/: README.md  head.stl
tests/: __init__.py  test_ik_solver.py
